[tool.poetry]
name = "clienttracker"
version = "0.1.0"
description = "App for tracking your often clients"
authors = ["Gleb Anohin <gl.anohin@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.6.1"
sqlalchemy = "^2.0.23"
vk-api = "^11.9.9"
gigachat = "^0.1.8"
flet = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
