[tool.poetry]
name = "clienttracker"
version = "0.1.0"
description = "App for tracking your often clients"
authors = ["Gleb Anohin <gl.anohin@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.19.0"
vobject = "^0.9.6.1"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
vk-api = "^11.9.9"
gigachat = "^0.1.13"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
